# codex_desktop_background

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
.cursor/skills/codex-background-development/: SKILL.md  architecture-and-pitfalls.md  windows-and-selectors.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: controller.rs  host.rs  injector.rs  lib.rs  main.rs  media.rs  models.rs  network.rs  payload.rs  preview.rs  settings.rs
src/main/: codex-controller.ts  index.ts  injector.ts  media-library.test.ts  media-library.ts  media-server.ts  network-policy.test.ts  network-policy.ts  payload.test.ts  payload.ts  preload.cts  settings.test.ts  settings.ts
src/renderer/: App.tsx  bridge.ts  global.d.ts  styles.css
src/shared/: contracts.ts
