[package]
name = "codex-background-studio"
version = "0.4.1"
description = "A reversible background manager for the Codex Windows desktop app."
authors = ["Codex Background Studio contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codex_background_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-opener = "2.5.4"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
sha2 = "0.10.9"
chrono = "0.4.45"
url = "2.5.8"
ipnet = "2.12.0"
imagesize = "0.15.0"
tiny_http = "0.12.0"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "native-tls-no-alpn", "stream"] }
tokio = { version = "1.53.1", features = ["fs", "io-util", "net", "time"] }
percent-encoding = "2.3.2"
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
base64 = "0.22.1"
wait-timeout = "0.2.1"
winreg = "0.56.0"
tauri-plugin-single-instance = "2.4.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
